test_suite/alan-2022-examples/failing/006140_mutation.alan
source kF begin leave 1 > boolean 74891 end
